Fix name overlap with tiny overall progress circle
Fixes #60

--- a/app/assets/stylesheets/progress.css.scss
+++ b/app/assets/stylesheets/progress.css.scss
@@ -34,7 +34,8 @@ $darkcolormap: (academics: $academics-color-dark, service: $service-color-dark, 
   }
 
   .overall-circle {
-    margin: 0 0 0 -34px;
+    vertical-align: top;
+    margin: 127px -4px 0 -30px;
     width: 68px;
     display: inline-block;
   }
